# core3

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  FOR_CONTRIBUTORS.md  README.md  build.bat  build.sh  build_android.py  conandata.yml  conanfile.py  config.h.in
.github/workflows/: android_on_windows.yml  ccpp.yml  linux.yml  linux_arm.yml  linux_arm_dynamic.yml  linux_dynamic.yml  osx.yml  osx_arm.yml  osx_arm_dynamic.yml  osx_dynamic.yml  windows.yml  windows_d3d12.yml  windows_dynamic.yml
cmake/: copy_dlls.cmake  oxc3.cmake
docs/: IEEE754 Floating point format.md  OxC3 tool.md  OxC3_tool.md  code_style.md  formats.md  graphics_api.md  graphics_spec.md  id_registry.md  oiBC_chimera.md  oiCA.md  oiDL.md  oiSB.md  oiSH.md  oiXX.md  platforms.md  symbol_tree.drawio  symbol_tree.md  types.md  types_docs.md
inc/audio/: device.h  interface.h  source.h  stream.h
inc/core3_bindings/: lexer.h  parser.h
inc/file/: file.h
inc/formats/: bmp.h  dds.h  json.h  oiBC.h  oiCA.h  oiDL.h  oiSB.h  oiSH.h  oiXX.h  texture.h  zip.h
inc/math/: big_int.h  math.h  quat.h  rand.h  transform.h  vec.h  vec2f.h  vec2i.h  vec4f.h  vec4i.h  vecf.h  veci.h
inc/shader_compiler/: compiler.h
inc/tools/: cli.h  operations.h
inc/types/: allocation_buffer.h  allocator.h  archive.h  assert.h  atomic.h  big_int.h  bit.h  bit_helper.h  buffer.h  buffer_layout.h  cdf_list.h  error.h  file.h  flp.h  generic_list.h  hash.h  lexer.h  list.h  list_impl.h  lock.h  log.h  math.h  math_helper.h  pack.h  parser.h  platform_types.h  quat.h  rand.h  ref_ptr.h  string.h  string_helper.h  texture_format.h  thread.h  time.h  (+10 more)
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  device.c  interface.c  source.c  stream.c
src/audio/openal_soft/: aldevice.c  alhelper.c  alinterface.c  alsource.c  alstream.c
src/formats/bmp/: CMakeLists.txt  read.c  write.c
src/formats/dds/: CMakeLists.txt  read.c  write.c
src/formats/oiSH/: CMakeLists.txt  binaries.c  combine.c  entries.c  includes.c  read.c  registers.c  sh_file.c  write.c
src/graphics/: CMakeLists.txt
src/graphics/d3d12/: CMakeLists.txt
src/graphics/d3d12/generic/: directx12.c  dx_allocator.c  dx_blas.c  dx_command_list.c  dx_compute_pipeline.c  dx_descriptor_heap.c  dx_descriptor_layout.c  dx_descriptor_table.c  dx_device.c  dx_device_buffer.c  dx_device_texture.c  dx_graphics_pipeline.c  dx_instance.c  dx_pipeline.c  dx_pipeline_layout.c  dx_raytracing_pipeline.c  dx_sampler.c  dx_swapchain.c  dx_texture.c  dx_tlas.c
src/graphics/directx12/generic/: directx12.c  dx_allocator.c  dx_blas.c  dx_command_list.c  dx_compute_pipeline.c  dx_device.c  dx_device_buffer.c  dx_device_texture.c  dx_graphics_pipeline.c  dx_instance.c  dx_pipeline.c  dx_raytracing_pipeline.c  dx_sampler.c  dx_swapchain.c  dx_texture.c  dx_tlas.c
src/graphics/generic/: allocator.c  blas.c  buffer.c  command_list.c  compute_pipeline.c  depth_stencil.c  descriptor_heap.c  descriptor_layout.c  descriptor_table.c  device.c  device_buffer.c  device_info.c  device_texture.c  graphics_buffer.c  graphics_pipeline.c  instance.c  interface.c  pipeline.c  pipeline_layout.c  raytracing_pipeline.c  render_texture.c  resource.c  rtas.c  sampler.c  swapchain.c  texture.c  tlas.c  types.c
src/graphics/generic/shaders/: image_copy.hlsl  mip_map.hlsl
src/graphics/shaders/: resources.hlsl  types.hlsl
src/graphics/vulkan/: CMakeLists.txt
src/graphics/vulkan/android/: avk_instance.c  avk_swapchain.c
src/graphics/vulkan/generic/: vk_allocator.c  vk_blas.c  vk_buffer.c  vk_command_list.c  vk_compute_pipeline.c  vk_depth_stencil.c  vk_descriptor_heap.c  vk_descriptor_layout.c  vk_device.c  vk_device_buffer.c  vk_device_texture.c  vk_graphics_pipeline.c  vk_instance.c  vk_pipeline.c  vk_pipeline_layout.c  vk_raytracing_pipeline.c  vk_render_texture.c  vk_sampler.c  vk_swapchain.c  vk_texture.c  vk_tlas.c  vulkan.c
src/graphics/vulkan/linux/: lvk_instance.c  lvk_swapchain.c
src/graphics/vulkan/osx/: ovk_instance.c  ovk_swapchain.c
src/graphics/vulkan/windows/: wvk_instance.c  wvk_swapchain.c
src/shader_compiler/: CMakeLists.txt  compiler.c  compiler.cpp  compiler_dxil.cpp  compiler_helper.c  compiler_spv.cpp
src/test/: CMakeLists.txt  test.c
src/tools/: CMakeLists.txt  audio.c  cli.c  combine.c  compile.c  convert.c  convert_oiCA.c  convert_oiDL.c  encrypt.c  graphics.c  hash.c  inspect.c  inspect_data.c  inspect_header.c  main.c  operations.c  package.c  profile.c  rand.c
src/tools/executable/: main.c
src/tools/oxc3_cli/: CMakeLists.txt  audio.c  cli.c  combine.c  compile.c  convert.c  convert_oiCA.c  convert_oiDL.c  encrypt.c  graphics.c  hash.c  inspect_data.c  inspect_header.c  operations.c  package.c  profile.c  rand.c
src/tools/oxc3_cli/executable/: main.c
src/tools/package_cli/: CMakeLists.txt  packager.c
src/tools/package_cli/executable/: main.c
src/types/base/: CMakeLists.txt  buffer.c  c8.c  constants.c  error.c  fixed_point.c  lock.c  platform_types.c  thread.c  time.c  type_id.c  types.c
src/types/container/: CMakeLists.txt  allocation_buffer.c  archive.c  big_int.c  buffer.c  buffer_compression.c  buffer_encrypt.c  buffer_hash.c  buffer_layout.c  cdf_list.c  file.c  generic_list.c  lexer.c  list.c  log.c  parser.c  parser_classification.c  ref_ptr.c  string.c  string_helpers.c  string_numbers.c  string_transform.c  string_unicode.c  texture_format.c
src/types/container/simd/none/: none_buffer_crc_lut.c  none_buffer_encrypt.c  none_buffer_hash.c
src/types/container/simd/sse/: sse_buffer_crc_lut.c  sse_buffer_encrypt.c  sse_buffer_hash.c
src/types/math/: CMakeLists.txt  flp.c  math.c  pack.c  quat.c  rand.c  type_cast.c  vec2f.c  vec2i.c  vec4f.c  vec4i.c
src/types/math/simd/none/: none_vec.c
src/types/math/simd/sse/: sse_vec.c
tools/: CMakeLists.txt  compile.bat  compile_debug.bat  resharper.DotSettings  test.bat  test.sh
tools/inc/: cli.h  operations.h
tools/src/: cli.c  compile.c  convert.c  convert_oiCA.c  convert_oiDL.c  encrypt.c  graphics.c  hash.c  inspect.c  main.c  operations.c  package.c  profile.c  rand.c
tst/: test.c
(+267 files in other folders)
